@@ -90,11 +90,11 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ACLOCAL = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run tar
-AUTOCONF = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run automake-1.11
+ACLOCAL = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run aclocal-1.11
+AMTAR = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run tar
+AUTOCONF = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run automake-1.11
 AWK = gawk
 BUILD = 
 CC = gcc
@@ -109,7 +109,7 @@ CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2
 CYGPATH_W = echo
 DBUS_GLIB_CFLAGS = -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
-DBUS_GLIB_LIBS = -L/lib -ldbus-glib-1 -ldbus-1 -lpthread -lrt -lgobject-2.0 -lglib-2.0  
+DBUS_GLIB_LIBS = -ldbus-glib-1 -ldbus-1 -lgobject-2.0 -lglib-2.0  
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
 ECHO_C = 
@@ -118,11 +118,11 @@ ECHO_T =
 EGREP = /bin/grep -E
 EXEEXT = 
 GETTEXT_MACRO_VERSION = 0.17
-GMSGFMT = /usr/bin/msgfmt
-GMSGFMT_015 = /usr/bin/msgfmt
+GMSGFMT = /usr/bin/gmsgfmt
+GMSGFMT_015 = /usr/bin/gmsgfmt
 GREP = /bin/grep
-GTK2_CFLAGS = -D_REENTRANT -pthread -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/directfb -I/usr/include/libpng12 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
-GTK2_LIBS = -pthread -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lm -lpangocairo-1.0 -lgio-2.0 -lcairo -lpango-1.0 -lfreetype -lfontconfig -lgobject-2.0 -lgthread-2.0 -lrt -lgmodule-2.0 -lglib-2.0  
+GTK2_CFLAGS = -pthread -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12  
+GTK2_LIBS = -pthread -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lfontconfig -lgobject-2.0 -lgthread-2.0 -lrt -lgmodule-2.0 -lglib-2.0  
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -138,15 +138,15 @@ LIBS =
 LTLIBICONV = -liconv
 LTLIBINTL = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 MPD_CFLAGS = -I/usr/include/libmpd-1.0/ -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
 MPD_LIBS = -lmpd -lglib-2.0  
 MSGFMT = /usr/bin/msgfmt
 MSGFMT_015 = /usr/bin/msgfmt
 MSGMERGE = /usr/bin/msgmerge
-NOTIFY_CFLAGS = -D_REENTRANT -I/usr/include/gtk-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/directfb -I/usr/include/libpng12  
-NOTIFY_LIBS = -L/lib -lnotify -lgtk-x11-2.0 -ldbus-glib-1 -lgdk-x11-2.0 -latk-1.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lm -lpangocairo-1.0 -lgio-2.0 -lcairo -lpango-1.0 -lfreetype -lfontconfig -lgmodule-2.0 -ldbus-1 -lpthread -lrt -lgobject-2.0 -lglib-2.0  
+NOTIFY_CFLAGS = -I/usr/include/gtk-2.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libpng12  
+NOTIFY_LIBS = -lnotify -lgtk-x11-2.0 -ldbus-glib-1 -lgdk-x11-2.0 -latk-1.0 -lgio-2.0 -lpangoft2-1.0 -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lcairo -lpango-1.0 -lfreetype -lfontconfig -lgmodule-2.0 -ldbus-1 -lgobject-2.0 -lglib-2.0  
 OBJEXT = o
 OL_GUIDIR = ${datarootdir}/osd-lyrics
 OL_ICONDIR = ${datarootdir}/osd-lyrics/icons
@@ -162,7 +162,7 @@ PKG_CONFIG = /usr/bin/pkg-config
 POSUB = po
 RANLIB = ranlib
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 SQLITE_CFLAGS =  
 SQLITE_LIBS = -lsqlite3  
 STRIP = 
@@ -175,10 +175,10 @@ XGETTEXT_015 = /usr/bin/xgettext
 XGETTEXT_EXTRA_OPTIONS = 
 XMMS2_CFLAGS = -I/usr/include/xmms2  
 XMMS2_LIBS = -lxmmsclient  
-abs_builddir = /home/tigersoldier/programs/osd-lyrics/trunk/lib
-abs_srcdir = /home/tigersoldier/programs/osd-lyrics/trunk/lib
-abs_top_builddir = /home/tigersoldier/programs/osd-lyrics/trunk
-abs_top_srcdir = /home/tigersoldier/programs/osd-lyrics/trunk
+abs_builddir = /home/tiger/programs/osd-lyrics/trunk/lib
+abs_srcdir = /home/tiger/programs/osd-lyrics/trunk/lib
+abs_top_builddir = /home/tiger/programs/osd-lyrics/trunk
+abs_top_srcdir = /home/tiger/programs/osd-lyrics/trunk
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -207,7 +207,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/tigersoldier/programs/osd-lyrics/trunk/install-sh
+install_sh = ${SHELL} /home/tiger/programs/osd-lyrics/trunk/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
